# react-context-analyzer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: model.rs
crates/engine/: Cargo.toml
crates/engine/src/: collect.rs  function_name.rs  lib.rs  link.rs  paths.rs
crates/engine/tests/: link_integration.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  parse.rs  scan.rs
crates/report/: Cargo.toml
crates/report/src/: json.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: json.rs
tests/fixtures/basic_working_context/input/: App.tsx
tests/fixtures/link_resolves_children/input/src/: App.tsx  ContentFrame.tsx  PageShell.tsx  ProfilePage.tsx
tests/fixtures/link_resolves_default_export/input/src/: App.tsx  ProfilePage.tsx
tests/fixtures/link_resolves_default_import/input/src/: App.tsx
tests/fixtures/link_resolves_export_alias/input/src/: App.tsx  ProfilePage.tsx
tests/fixtures/link_resolves_member_expression/input/src/: App.tsx  ui.tsx
tests/fixtures/link_resolves_named_import/input/src/: App.tsx  ProfilePage.tsx
tests/fixtures/link_resolves_nested_children/input/src/: App.tsx  Avatar.tsx  GlobalNav.tsx  PageShell.tsx  ProfilePage.tsx
tests/fixtures/link_shared_child_multiple_distinct_parents/input/src/: App.tsx  LeftPane.tsx  RightPane.tsx  SharedChild.tsx
