[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
context-analyzer-core = { path = "../core" }
context-analyzer-engine = { path = "../engine" }
context-analyzer-frontend = { path = "../frontend" }
context-analyzer-report = { path = "../report" }

[dev-dependencies]
assert_cmd = "2.0.16"
serde_json = "1.0"
