[package]
name = "context-analyzer-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "context_analyzer_engine"
path = "src/lib.rs"

[dependencies]
context-analyzer-core = { path = "../core" }
context-analyzer-frontend = { path = "../frontend" }
oxc_allocator = "0.119.0"
oxc_ast = "0.119.0"
oxc_ast_visit = "0.119.0"
oxc_parser = "0.119.0"
oxc_resolver = "11.19.1"
oxc_span = "0.119.0"
oxc_syntax = "0.119.0"
rayon = "1.10.0"
